home page => Hover effects, v-scroll, alignment defect fix

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -126,7 +126,7 @@
       color: #fff;
       transition: all 0.14s;
       font-size: 16px;
-      font-weight: 500;
+      font-weight: 400;
 
     }
 
