--- a/assets/scss/utilities/_button.scss
+++ b/assets/scss/utilities/_button.scss
@@ -27,7 +27,7 @@
 	&-primary {
 		color: $black;
 		background: $green;
-
+		border-radius: 4px;
 		&:hover {
 			color: $black;
 			background: $white;
